--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@
 
 .create-transfer-input-section, .create-transfer-style-section, .create-transfer-result-section {
   border-radius: 10%;
+  padding: 20px;
 
 }
 
