--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
   flex-wrap: wrap;
 }
 
+
 .body-container-heading, h3 {
   font-family: 'Montserrat', sans-serif;
 }
@@ -19,7 +20,7 @@
   color: grey;
 }
 
-.transfer-container {
+#transfer-container {
   display: flex;
   justify-content: center;
   margin: 30px;
@@ -76,7 +77,7 @@ a#try-button:hover {
     border: solid #327068 1px;
 }
 
-.create-transfer-container {
+#create-transfer-container {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
