--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ a#try-button:hover {
   margin: 15px;
 }
 
-.create-transfer-input-image, .create-transfer-style-image, .button-section {
+.create-transfer-input-image, .create-transfer-style-image, .button-section, #result-image-container {
   display: flex;
   justify-content: center;
 }
@@ -130,4 +130,5 @@ a#try-button:hover {
 
 #result-image-container img {
   width: 400px;
+  height: 400px;
 }
