Add webcam capture with p5 instead of javascript code. Hide static image to show capture in its place when webcam button clicked

--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ a#try-button:hover {
   margin: 15px;
 }
 
-.create-transfer-input-image, .create-transfer-style-image, .button-section, #result-image-container {
+#create-transfer-input-image, .create-transfer-style-image, .button-section, #result-image-container {
   display: flex;
   justify-content: center;
 }
